# Gem-rs

./: Cargo.toml  readme.md
examples/: gem.rs
src/: api.rs  client.rs  errors.rs  lib.rs  types.rs  utils.rs
