[package]
name = "gem-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
log = "0.4.22"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.7", features = ["json", "stream", "multipart"] }
reqwest-streams = { version = "0.7.0", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
